--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="110dp"
         android:layout_marginEnd="16dp"
-        android:text="Weather Forecast Application"
+        android:text="@string/app_name"
         android:textColor="#1E90FF"
         android:textSize="20sp"
         android:textStyle="bold"
