--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -31,7 +31,7 @@
         android:layout_marginStart="110dp"
         android:layout_marginEnd="16dp"
         android:text="@string/app_name"
-        android:textColor="#1E90FF"
+        android:textColor="@color/dark_blue"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/profile_iv"
