--- a/app/src/main/res/navigation/my_graph.xml
+++ b/app/src/main/res/navigation/my_graph.xml
@@ -7,27 +7,27 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.weatherforecast.HomeFragment"
+        android:name="com.example.weatherforecast.home.view.HomeFragment"
         android:label="Home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/favoritesFragment"
-        android:name="com.example.weatherforecast.FavoritesFragment"
+        android:name="com.example.weatherforecast.favorites.view.FavoritesFragment"
         android:label="Favorites"
         tools:layout="@layout/fragment_favorites" />
     <fragment
         android:id="@+id/alertsFragment"
-        android:name="com.example.weatherforecast.AlertsFragment"
+        android:name="com.example.weatherforecast.alerts.view.AlertsFragment"
         android:label="Alerts"
         tools:layout="@layout/fragment_alerts" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.weatherforecast.SettingsFragment"
+        android:name="com.example.weatherforecast.settings.view.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_settings" />
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.example.weatherforecast.SplashFragment"
+        android:name="com.example.weatherforecast.onboarding.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" >
         <action
