--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
-                android:layout_width="250dp"
+                android:layout_width="350dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="20dp"
                 android:backgroundTint="@color/medium_purple"
@@ -66,16 +66,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="22dp"
-                        android:layout_marginEnd="27dp"
+                        android:layout_marginEnd="50dp"
                         android:text="clear sky "
                         android:textColor="@color/white"
+                        android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/weather_temp_txt"
-                        android:layout_width="66dp"
-                        android:layout_height="63dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="18dp"
                         android:gravity="center"
                         android:text="13°"
@@ -85,21 +86,15 @@
                         app:layout_constraintStart_toStartOf="@+id/weather_status_txt"
                         app:layout_constraintTop_toBottomOf="@+id/weather_status_txt" />
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="100dp"
+                    <ImageView
+                        android:id="@+id/weatherIconImg"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        app:cardCornerRadius="120dp"
+                        android:layout_marginStart="50dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <ImageView
-                            android:id="@+id/weather_icon_img"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            app:srcCompat="@drawable/apitest" />
-                    </androidx.cardview.widget.CardView>
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/apitest" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
@@ -344,6 +339,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/visibility_txt" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
