--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:headerLayout="@layout/header_layout"
-            app:menu="@menu/menu" />
+            app:menu="@menu/menu"
+            app:itemIconTint="@drawable/selector"
+            app:itemTextColor="@drawable/selector"/>
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
