--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:headerLayout="@layout/header_layout"
+            android:background="@color/light_purple"
             app:menu="@menu/menu"
             app:itemIconTint="@drawable/selector"
             app:itemTextColor="@drawable/selector"/>
