--- a/app/src/main/res/layout/fragment_first_screen.xml
+++ b/app/src/main/res/layout/fragment_first_screen.xml
@@ -51,8 +51,8 @@
 
         <ImageView
             android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
