--- a/app/src/main/res/layout/fragment_second_screen.xml
+++ b/app/src/main/res/layout/fragment_second_screen.xml
@@ -64,8 +64,8 @@
 
         <ImageView
             android:id="@+id/next_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
