--- a/app/src/main/res/navigation/my_graph.xml
+++ b/app/src/main/res/navigation/my_graph.xml
@@ -23,6 +23,9 @@
             app:argType="com.google.android.gms.maps.model.LatLng"
             app:nullable="true"
             android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_favoritesFragment_to_favoriteWeather2"
+            app:destination="@id/favoriteWeather" />
     </fragment>
     <fragment
         android:id="@+id/alertsFragment"
@@ -69,5 +72,15 @@
         <action
             android:id="@+id/action_mapsFragment_to_favoritesFragment"
             app:destination="@id/favoritesFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/favoriteWeather"
+        android:name="com.example.weatherforecast.favoriteWeather.view.FavoriteWeather"
+        android:label="FavoriteWeather" >
+        <argument
+            android:name="location"
+            app:argType="com.google.android.gms.maps.model.LatLng"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 </navigation>
