--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
    <gradient android:startColor="@color/dark_blue"
        android:endColor="@color/light_purple"
-       android:angle="70"/>
+       android:angle="70"
+       />
 </shape>
