--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -58,14 +58,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@color/dark_blue"
+            android:background="@drawable/settingselector2"
             app:layout_constraintTop_toBottomOf="@+id/textView5">
 
             <RadioButton
                 android:id="@+id/radio_gps"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
+                android:drawableEnd="@drawable/gps"
+                android:drawablePadding="5dp"
+                android:layoutDirection="rtl"
+                android:paddingLeft="15dp"
                 android:buttonTint="@color/white"
                 android:text="@string/radio_Gps"
                 android:textColor="@color/white"
@@ -75,8 +79,12 @@
                 android:id="@+id/radio_map"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:buttonTint="@color/white"
+                android:drawableEnd="@drawable/map"
+                android:drawablePadding="5dp"
+                android:layoutDirection="rtl"
+                android:paddingLeft="15dp"
                 android:text="@string/radio_Map"
                 android:textColor="@color/white"
                 android:textStyle="bold"></RadioButton>
